# commentbots

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/bot/: app.py  states.py
src/bot/handlers/: accounts.py  bulk_import.py  campaigns.py  proxy.py  settings.py  start.py  stats.py
src/bot/keyboards/: accounts.py  campaigns.py  main.py  proxy.py  settings.py  stats.py
src/bot/middlewares/: auth.py  db_session.py
src/core/: config.py  exceptions.py  logging.py
src/db/: base.py
src/db/models/: __init__.py  account.py  assignment.py  campaign.py  channel.py  event_log.py  proxy.py  user.py
src/db/repositories/: __init__.py  account_repo.py  assignment_repo.py  base_repo.py  campaign_repo.py  channel_repo.py  event_log_repo.py  proxy_repo.py  user_repo.py
src/services/: __init__.py  account_service.py  bulk_import_service.py  campaign_service.py  channel_service.py  distributor.py  notification_service.py
src/telegram/: client.py
src/worker/: account_worker.py  entities.py  manager.py
