[project]
name = "commentbot"
version = "2.0.0"
description = "Telegram channel comment automation bot"
requires-python = ">=3.11"
dependencies = [
    # Telegram
    "aiogram>=3.4,<4.0",
    "telethon>=1.34,<2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    # Config & validation
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    # Logging
    "structlog>=24.0",
    # Security
    "cryptography>=42.0",
    # Async HTTP (for telethon proxy support)
    "aiohttp>=3.9,<4.0",
    "aiohttp-socks>=0.8,<1.0",
    # Utils
    "python-socks[asyncio]>=2.4,<3.0",
]

[project.optional-dependencies]
tdata = [
    "opentele>=1.15",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
